more styling added

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -5,5 +5,19 @@
 
 .nameLayout {
     text-decoration: none;
+    color: white;
 
+}
+.tabs {
+    color: white;
+
+}
+
+.tabs::selection {
+    color: pink;
+
+}
+
+.banner {
+    background-color: black;
 }
