--- a/src/styles/entrypage.css
+++ b/src/styles/entrypage.css
@@ -1,3 +1,12 @@
 .deskentry {
     justify-content: center;
+
+}
+
+.hometitle {
+    justify-content: center;
+}
+
+.welcomebutton {
+    justify-content: center;
 }
