--- a/src/styles/entrypage.css
+++ b/src/styles/entrypage.css
@@ -5,8 +5,21 @@
 
 .hometitle {
     justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    margin: 0px;
+    text-align: center;
+    padding-top: 30vh;
+
 }
 
-.welcomebutton {
-    justify-content: center;
+#titlename {
+    font-size: 10vmin;
+ 
+    
+}
+
+#titlelabel {
+    font-size: 5vmin;
+    
 }
