--- a/src/styles/entrypage.css
+++ b/src/styles/entrypage.css
@@ -5,16 +5,19 @@
     display: flex;
     height: 100%;
     background-color: black;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    
 
 }
 
 .hometitle {
-    justify-content: center;
-    width: 100vw;
-    height: 100vh;
-    margin: 0px;
-    text-align: center;
-    padding-top: 30vh;
+    
+   
+    
+    margin: auto;
+   
 
 }
 
@@ -24,18 +27,18 @@
     color: white;
     cursor: pointer;
     position: relative;
-
     
+
 }
     .Title__entry {
     text-decoration: none;
-    color: black;
+ 
     position: relative;
     margin: 0;
     padding: 0;
     overflow: hidden;
     text-transform: uppercase;
-    font-size: 10vmin;
+    font-size: 6em;
     -webkit-text-stroke: 1px white;
     -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
@@ -52,26 +55,28 @@
 
 }
 
-.Title__highLight {
-    position: absolute;
-    width: 100%;
-    bottom: -50;
-    left: 0;
-    height: 50px;
-    background-color: #43ffbe;
-    z-index: -1;
-    transition: transform 400ms ease;
-}
+
 
 .Title__filled {
+    text-decoration: none;
+    color: white;
     position: absolute;
     margin: 0;
     padding: 0;
     text-transform: uppercase;
+    text-align: center;
     font-size: 6em;
     top: 0;
+    
     clip-path: polygon(0% 100%, 0% 99%, 100% 99%, 100% 100%);
     transition: clip-path 600ms cubic-bezier(0.2, 0.1, 0.15, 1.32);
   
 }
 
+.Title:hover > .Title__filled {
+    clip-path: polygon(0% 100%, 0% 0%, 100% 0%, 100% 100%);
+}
+
+.Title:hover > .Title__underLine {
+    transform: translateY(-9em);
+}
