--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -25,7 +25,7 @@
 
 }
 .tabs:hover {
-    color: blue;
+    font-size: 22px;
 }
 
 
@@ -64,7 +64,7 @@
     position: fixed;
     bottom: 0;
     width: 100vw;
-    height: 7vh;
+    height: 9vh;
     
 }
 
@@ -80,4 +80,18 @@ margin-right: auto;
     display: flex;
 align-items: center;
 padding: 1rem 5rem;
+}
+
+.svgcontainer {
+    font-size: 20px;
+    float: right;
+}
+
+.svgicon {
+    font-size: 25px;
+    vertical-align: center;
+    text-decoration: none;
+    color: black;
+    margin-right: 2rem;
+    
 }
