--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:700");
+
 body {
     margin: 0px;
+    
 } 
 p {
     line-height: 1.2;
     font-size: 1.25rem;
   }
+
