--- a/src/styles/contactpage.css
+++ b/src/styles/contactpage.css
@@ -22,8 +22,6 @@
     min-height: 35vh;
     
     
-    
-    
 }
 
 .columncontainer {
@@ -31,6 +29,10 @@
     margin: auto;
     padding: auto;
 
+}
+.spacing {
+    width: 100vw;
+    height: 5vh;
 }
 
 .column {
