--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -9,8 +9,8 @@
     text-decoration: none;
     color: white;
     font-size: 32px;
-    margin-left: 2vmin;
-    margin-top: 2vmin;
+    margin-left: 5vmin;
+    margin-top: 4vmin;
 
 }
 .nameLayout:hover {
@@ -36,7 +36,7 @@
     
     float: right;
     list-style: none;
-    margin-top: 0.3rem;
+    margin-top: 0.5rem;
     background-color: black;
 }
 
@@ -48,11 +48,15 @@
     margin-left: auto;
     margin-right: auto;
     width: 100vw;
-    height: 7vh;
+    height: 8vh;
 }
 
 .entiredesk {
     margin: 0px;
+   
+}
+.desk {
+    margin-bottom: 9vh;
 }
 
 .activeLink {
@@ -98,3 +102,4 @@ padding: 1rem 5rem;
     margin-right: 2rem;
     
 }
+
