creating columns in project page

--- a/src/styles/projectpage.css
+++ b/src/styles/projectpage.css
@@ -23,6 +23,12 @@
     text-align: center;
 }
 
+.imageteasers {
+    max-width: 15vw;
+    max-height: 15vh;
+}
+
+
 /* this will be carousel css code */
 .carousel {
     position: relative;
