finishing up project page and gallery

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,11 @@ body {
     overflow-x: hidden;
     
 } 
+-webkit-scrollbar {
+    display: none;
+  }
+
+  
 p {
     line-height: 1.2;
     font-size: 1.25rem;
